# timehistory-bash

./: CHANGELOG.md  Cargo.toml  FORMAT.md  README.md  build.rs
.github/workflows/: release.yml
generator/: Cargo.toml
generator/src/: doc.md  doc.txt  docs.rs  lib.rs  parser.rs  source.rs
pkg/: build-release.sh
pkg/common/: metadata
pkg/debian/: build.sh  changelog  control
pkg/rpm/: build.sh  timehistory.spec
src/: bytetables.rs  format.rs  format.spec  funcwrappers.rs  history.rs  jsonext.rs  lib.rs  tests.rs  verbose.fmt
src/format/: escapes.rs  format.spec  mod.rs  options.rs  tables.rs  tests.rs  verbose.fmt
src/ipc/: events.rs  mod.rs  sharedbuffer.rs
src/ipc/events/: exec.rs  ioext.rs  mod.rs  wait.rs
src/procs/: execve.rs  mod.rs  waitpid.rs
src/tests/: mod.rs
src/tests/shell/: _assert.sh  change-config.test.sh  clear-history.test.sh  headers.test.sh  limit-cmdline.test.sh  rotate-history.test.sh  tables.test.sh  track-subshell.test.sh
tests/ui/: change-config.output  change-config.sh  clear-history.output  clear-history.sh  remove-after-panic.output  remove-after-panic.sh  remove.output  remove.sh  rotate-history.output  rotate-history.sh  single-entry.output  single-entry.sh  track-subshell.output  track-subshell.sh
