[package]
name = "timehistory-bash"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

[dependencies]
bash-builtins = "0"
chrono = { version = "0.4.19", features = ["serde"] }
libc = "0"
memchr = "2.4.0"
once_cell = "1.8.0"
plthook = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
generator = { path = "generator" }

[profile.release]
lto = true
incremental = false

[lib]
crate-type = [ "cdylib" ]

[workspace]
members = [
  "generator"
]
