[package]
name = "timehistory-bash"
version = "0.2.0"
edition = "2018"
description = "Bash loadable builtin to track resources used by programs."
readme = "README.md"
homepage = "https://github.com/ayosec/timehistory-bash"
repository = "https://github.com/ayosec/timehistory-bash.git"
license = "Apache-2.0"
keywords = [ "bash" ]
publish = false

[dependencies]
bash-builtins = "0"
chrono = { version = "0.4.19", features = ["serde"] }
libc = "0"
memchr = "2.4.0"
once_cell = "1.8.0"
plthook = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.1.8"

[build-dependencies]
generator = { path = "generator" }

[features]
option-for-panics = []

[profile.release]
lto = true
incremental = false

[lib]
crate-type = [ "cdylib" ]

[workspace]
members = [
  "generator"
]
